prevented overflow of text when in a smaller screen

--- a/style.css
+++ b/style.css
@@ -162,7 +162,8 @@ html {
 
 #availableBooksTextBox {
     width: 100%;
-
+    overflow: auto;
+    max-height:250px;
     margin: 0px auto 0px 0px;
     text-align: center;
     display: flex;
